Fix Compact Tabs close button alignment

--- a/[ui] Compact Tabs.css
+++ b/[ui] Compact Tabs.css
@@ -53,7 +53,7 @@
 
 .workspace-tabs:not([class*=-right], [class*=-left]) .workspace-tab-header:not(.is-active) .workspace-tab-header-inner-close-button {
     position:absolute;
-    right:8px;
+    right:6px;
     margin-top:0px;
 }
 
